Conexion de la landing page con el terminal de ayuda
en esta actualizacion se crea un link para ir a la pagina que posee el terminal

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <main>
     <section>
       <h2>Sobre mí</h2>
-      <p>Bienvenido a mi perfil profesional. Aquí encontrarás información sobre mis habilidades, experiencia y proyectos.</p>
+      <p>Encuentra informacion mia de manera rapida con mi terminal</p>
+      <a href="terminal/terminal.html">Ir a la página</a>
     </section>
 
     <section>
