--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
   <main>
     <section>
       <h2>Sobre mí</h2>
-      <p>Encuentra informacion mia de manera rapida con mi terminal</p>
-      <a href="terminal/terminal.html">Ir a la página</a>
+      <p>Encuentra informacion mia de manera rapida con mi terminal:</p>
+      <div class ="boton">
+        <a href="terminal/terminal.html">Ir a la página</a>
+      </div>
+      
     </section>
 
     <section>
