--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="cssPresentacion.css">
-  <title>Mi Perfil Profesional</title>
+  <title>Web Personal Andrés Felipe Ramírez Vásquez</title>
 </head>
 <body>
   <header>
@@ -25,25 +25,29 @@
       <h2>Habilidades</h2>
       <ul>
         <li>Desarrollo web</li>
-        <li>Diseño de interfaces de usuario</li>
-        <li>Resolución de problemas</li>
+        <li>Desarrollo de aplicaciones de escritorio</li>
+        <li>Desarrollo de aplicaciones de videojuegos</li>
+        <li>Ingenieria de software</li>
+        <li>Análisis de datos</li>
+        <li>patrones de diseño</li>
+        <li>arquitectura de software</li>
+        <li>Análisis de datos</li>
       </ul>
+
     </section>
 
     <section>
       <h2>Experiencia</h2>
       <ul>
-        <li>Desarrollador web en ABC Company (2018 - Presente)</li>
-        <li>Practicante en XYZ Inc. (2017 - 2018)</li>
+        <li>Freelance (2022 - Presente)</li>
       </ul>
     </section>
 
     <section>
       <h2>Proyectos destacados</h2>
       <ul>
-        <li>Proyecto A</li>
-        <li>Proyecto B</li>
-        <li>Proyecto C</li>
+        <li>GameEcology</li>
+        <a href="https://github.com/AndresFelipePuJ/GameEcologyV14.0">Ir a la página</a>
       </ul>
     </section>
   </main>
