--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="cssPresentacion.css">
-  <title>Web Personal Andrés Felipe Ramírez Vásquez</title>
+  <title>Andrés Felipe</title>
 </head>
 <body>
   <header>
-    <h1>Mi Perfil Profesional</h1>
+    <h1>Web Personal Andrés Felipe Ramírez Vásquez</h1>
   </header>
 
   <main>
